--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" manifest="cache.appcache">
 <head>
   <meta charset="utf-8">
-  <title>Make and Play Udacity 2048</title>
+  <title>Presidential Succession 2048</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600,700' rel='stylesheet' type='text/css'>
@@ -25,7 +25,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">Make 2048</h1>
+      <h1 class="title">Presidential Succession 2048</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -40,7 +40,7 @@
     </div>
 
     <div class="pre-game">
-      <p class="learn">Learn to make your own version of 2048 in 30 minutes in Udacity's mini online class for beginners.</p><a class="learn" href="https://www.udacity.com/course/ud248">Take the Class!</a>
+      <p class="learn">The tiles represent the people that would take power after the president from lowest to highest.
     </div>
 
 
@@ -88,7 +88,7 @@
 
 
     <p class="game-explanation">
-      <strong class="important">Make your own version:</strong> If you'd like to make your own version of this game, check out Udacity's newest course for beginners <a href="https://www.udacity.com/course/ud248" target="_blank">Make your own 2048</a>. No programming experience is required and in less than half an hour you'll dig into the source code, make some changes, and have your own version of the game to share.
+      <strong class="important"></strong> This version by Xella Doi.
     </p>
     <hr>
     <p class="game-explanation">
