--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="pre-game">
-      <p class="learn">The tiles represent the people that would take power after the president from lowest to highest.
+      <p class="learn">
     </div>
 
 
@@ -48,7 +48,6 @@
       <div class="game-message">
         <p></p>
         <div class="lower">
-	        <a href="http://www.udacity.com/course/ud248"class="learn learn-low">Take the Class!</a>
           <a class="retry-button">Play Again</a>
           <div class="score-sharing"></div>
         </div>
