Edsby Link Added

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
     <p>
     This is a modified version of the <a href="http://gabrielecirulli.github.io/2048/" target="_blank">original game</a> created by Gabriele Cirulli.
     </p>
+    <hr>
+    <p>
+    To go to Edsby, click <a href="http://sdhc.edsby.com/" target="_blank">here</a>.
+    </p>
   </div>
 
   <script src="js/bind_polyfill.js"></script>
