Clean Up After Merge

--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
     </div>
 
     <div class="above-game">
-<<<<<<< HEAD
       <p class="game-intro">Join identical pictures to win the game!
-      <a>             
-=======
-      <p class="game-intro">
->>>>>>> gh-pages
       <a class="restart-button">New Game</a>
       Use the arrow keys to slide  tiles. Combine similar tiles to create new ones.</p>
       
@@ -95,23 +90,12 @@
       <strong class="important"></strong> This version by Xella Doi.
     </p>
     <hr>
-    <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same value touch, they <strong>merge into one!</strong>
-    </p>
-    <hr>
     <p>
-<<<<<<< HEAD
-    </p>
-    <hr>
-    <p>
-    This version by Xella Doi. Original created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
-=======
-    This is a modified version of the <a href="http://gabrielecirulli.github.io/2048/" target="_blank">original game</a> created by Gabriele Cirulli.
+    Original created by Gabriele Cirulli. Based on 1024 by Veewo Studio and conceptually similar to Threes by Asher Vollmer.
     </p>
     <hr>
     <p>
     To go to Edsby, click <a href="http://sdhc.edsby.com/" target="_blank">here</a>.
->>>>>>> gh-pages
     </p>
   </div>
 
